// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documents list renders correctly 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <div
      class="woocommerce-filters-documents"
    >
      <h2
        class="screen-reader-text"
      >
        Filters
      </h2>
      <div
        class="woocommerce-filters"
      >
        <div
          class="woocommerce-filters__basic-filters"
        >
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Show
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All documents
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table documents-list woocommerce-report-table has-search has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Documents
          </h2>
          <div
            class="woocommerce-table__actions"
          />
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Documents
              </caption>
              <tbody>
                <tr>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-0"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date and time
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-0"
                    >
                      Sort by Date and time in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Description
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Description
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <span
                      class="screen-reader-text"
                    >
                      Download
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item date is-left-aligned is-sorted"
                    scope="row"
                  >
                    Jan 2, 2020
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT Invoice
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT invoice without proper period dates
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <button
                      class="components-button is-link"
                      type="button"
                    >
                      Download
                    </button>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item date is-left-aligned is-sorted"
                    scope="row"
                  >
                    Jan 4, 2020
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT Invoice
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT invoice without proper period dates
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <button
                      class="components-button is-link"
                      type="button"
                    >
                      Download
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                10
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                documents
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Documents list renders table summary only when the documents summary data is available with a single document 1`] = `
<div>
  <div
    class=" woocommerce-payments-page"
  >
    <div
      class="woocommerce-filters-documents"
    >
      <h2
        class="screen-reader-text"
      >
        Filters
      </h2>
      <div
        class="woocommerce-filters"
      >
        <div
          class="woocommerce-filters__basic-filters"
        >
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Show
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All documents
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table documents-list woocommerce-report-table has-search has-actions has-menu css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text css-1s1vggh-View-Text-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Documents
          </h2>
          <div
            class="woocommerce-table__actions"
          />
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body css-1i4jx7i-View-Body-borderRadius em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-hidden="false"
            aria-labelledby="caption-7"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-7"
              >
                Documents
              </caption>
              <tbody>
                <tr>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-7-0"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date and time
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-7-0"
                    >
                      Sort by Date and time in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Description
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Description
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <span
                      class="screen-reader-text"
                    >
                      Download
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item date is-left-aligned is-sorted"
                    scope="row"
                  >
                    Jan 2, 2020
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT Invoice
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT invoice without proper period dates
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <button
                      class="components-button is-link"
                      type="button"
                    >
                      Download
                    </button>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item date is-left-aligned is-sorted"
                    scope="row"
                  >
                    Jan 4, 2020
                  </th>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT Invoice
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    VAT invoice without proper period dates
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <button
                      class="components-button is-link"
                      type="button"
                    >
                      Download
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer css-142znvl-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                1
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                document
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
